--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,7 @@
     padding: 0;
 }
 .debug header {
-    background-color: #add8e6;
-    
-    
-    
-    
+    background-color: #add8e6;   
 }
 header{
     padding-top: 20px;
@@ -34,53 +30,138 @@ header{
     padding-bottom: 20px;
     padding-top: 20px;
     margin: 20px 0;
-   
-    
 }
 
   .debug .header-botton{
     background-color:#ee82ee ;
     height: 300px;
     width: 620px;
-    
+    border: 5px solid;
+    border-style: dashed;
 }
 .header-botton{
     padding-bottom: 20px;
+
 }
 section{
-    padding: 22px 0;
-    
+    padding: 20px 60px 20px 30px
 }
+
 .debug .window{
     height: 350px;
 }
 .window{
-    display: flex;
-    
+    display: flex;    
 }
+
 .debug .window-big{
     background-color: #1e90ff;
+    border: 5px solid;
+    border-style: dashed;
 }
+
 .debug .window-small{
     background-color: #ffc0cb;
+    border: 5px solid;
+    border-style: dashed;
 }
+
 .window-big{
     width: 60%;
 }
+
 .window-small{
     width: 40%;
 }
+
 .debug .big-box{
     background-color: #d3d3d3;
 }
+
 .debug .big-box-grey{
-    height: 520px;
+    height: 580px;
     background-color: #d3d3d3;
 }
+
 .debug .green-box{
     background-color: #228b22;
-    width: 1000px;
-    height: 470px;
-    
-
+    width: 96%;
+    height: 520px;
+    border: 5px solid;
+    border-style: dashed;    
 }
+
+.debug footer{
+    background-color:#23272a ;
+    height: 800px;    
+}
+
+.box-footer{
+    display: flex;
+}
+
+.debug .box-footer{
+    height: 550px;
+    padding-bottom: 30px;
+    padding-top: 8px;
+}
+
+.debug .footer-small{
+    background-color: #f08080;
+    border: 5px solid;
+    border-style: dashed;
+}
+
+.debug .footer-big{
+    background-color: #20b2aa;
+    border: 5px solid;
+    border-style: dashed;    
+}
+
+.footer-small{
+    width: 30%;
+}
+
+.footer-big{
+    width: 50%;
+    display: flex;    
+}
+
+.col-footer {
+    width: calc(100% / 4);
+    height: 100%;
+    border: 5px solid white;
+    border-style: dashed;
+}
+   .debug .second-footer{
+    background-color: #23272a;
+    border: 1px solid white;
+    width: 100%;
+   }
+
+   .debug .option-footer{
+    background-color: #7fffd4;
+    height: 60px;
+    width: 72%; 
+   }
+
+   .second-footer{
+    display: flex;
+    flex-direction: column; 
+    margin-top: -15px;
+
+   }
+   .option-footer{
+    display: flex;
+    justify-content: space-between;
+    margin-right: 30px;
+    margin-left: 70px;   
+   }
+
+   button{
+    border: 1px solid black;
+    padding: 15px 25px;
+    margin: 10px 0;
+    line-height: 100%;
+    background-color: #ffb6c1; 
+   }
